k8/spring-petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-service
spec:
  selector:
    app: spring-petclinic
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80          # External port
      targetPort: 9090  # Pod's container port
